2007-06-19  Benjamin Berg  <benjamin@sipsolutions.net>

	* NEWS:
	* configure.ac:
	Update for 2.11.2 release.

2007-06-19  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	(clearlooks_glossy_draw_scale_trough):
	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_scale_trough):
	Implement fill level in glossy and gummy.

2007-06-17  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/industrial/src/industrial_style.c: (real_draw_box):
	GtkRange fill_level implementation for industrial.

2007-06-17  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_scale_trough):
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box), (clearlooks_style_draw_slider):
	* engines/clearlooks/src/clearlooks_types.h:
	Implemented GTK+ 2.12 fill_level in clearlooks (classic style only).

2007-06-15  Benjamin Berg  <benjamin@sipsolutions.net>

	* configure.ac:
	* schema/Makefile.am:
	* schema/*.xml.in.in:
	Renamed crux, hc and redmond schema files so that they follow the
	library name, instead of the gtk-engines internal one.

2007-06-13  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_menubar0):
	To Benzea: why menubar0 draw a white line on top?
	Commented those lines to disable that light line

2007-06-13  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_gripdots), (clearlooks_draw_slider),
	(clearlooks_draw_menubar), (clearlooks_get_frame_gap_clip),
	(clearlooks_draw_frame), (clearlooks_draw_toolbar):
	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	(clearlooks_glossy_draw_scrollbar_slider),
	(clearlooks_glossy_draw_toolbar),
	(clearlooks_register_style_glossy):
	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_button),
	(clearlooks_gummy_draw_scrollbar_slider),
	(clearlooks_gummy_draw_toolbar):