@@ -1,3 +1,12 @@
+2007-07-05  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
+	* engines/clearlooks/src/clearlooks_draw_gummy.c:
+	(clearlooks_gummy_draw_scrollbar_slider):
+	* engines/clearlooks/src/clearlooks_style.c:
+	(clearlooks_style_draw_layout):
+	Shade the scrollbar color on borders and handles for
+	better rendering quality
+
 2007-06-19  Benjamin Berg  <benjamin@sipsolutions.net>
 
 	* NEWS:
